added link to the about us

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 
       <div class="footcoll1">
         <div class="aboutus">
-          <span style="font-size: 21px;padding-left: 0px;" class="footer-underline"><b>about us</b></span><br><br>
+          <span style="font-size: 21px;padding-left: 0px;" class="footer-underline"><b><a href="aboutus.html">about us</a></b></span><br><br>
           <a href="#">Terms of services</a><br>
           <a href="#">Sell with us</a><br>
           <a href="#">press and news</a><br>
