added the link of gaming quest in iteration 2

--- a/questionnaire.html
+++ b/questionnaire.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="coll1">
                     <div class="stepbutton">
-                        step2
+                        <a href="./Gamingquest.html">step2</a>
                     </div>
                 </div>
                 <div class="coll1">
