--- a/Gamingquest.html
+++ b/Gamingquest.html
@@ -101,7 +101,7 @@
 
 
             </div>
-            <div class="maincontain">
+            <!-- <div class="maincontain">
                 <div class="coll2" style="text-align: center;">
                     <div class="middle">
                         <div class="text">Welcome to the gaming world. Ace your gaming perfoemance with your new laptop</div>
@@ -121,7 +121,7 @@
                     <div style="text-align: center;font-size: 30px;color:orange;font-family: geForce bold;padding: 10px;"><input type="radio" name="exp" id="mvp" value="mvp"> Most valueable - MVP</div>
                 </div>
 
-            </div>
+            </div> -->
 
             <div style="font-size: 35px;font-family: 'montserrat',sans-serif;color:orange;width: 60%;margin: auto;line-height: 70px;margin-top: 60px;background-color: rgba(0,0,0,0.6);text-align: center;font-weight: bold;">The screen size</div>
 
