--- a/aboutus.html
+++ b/aboutus.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="css/aboutuscss.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
@@ -22,8 +21,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Raleway:wght@300&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Raleway:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles_agency.css">
+    <link rel="stylesheet" href="css/styles_greyscale.css">
 
     <!--splide-->
 
@@ -35,64 +35,101 @@
         <div class="ourstory_text">All laptop,computer products and services on<br> single platform</div>
     </div>
 
-    <div class="what" style="text-align: center;margin:auto;padding-top: 60px;font-size: 50px;font-family: 'Comfortaa', cursive;">
+    <!-- <div class="what" style="text-align: center;margin:auto;padding-top: 60px;font-size: 50px;font-family: 'Comfortaa', cursive;">
         What Thunderman do</div>
-    <div style="font-family: 'montserrat',sans-serif;font-size: 15px;text-align: center;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae natus praesentium sed! Temporibus, consequuntur. Minima officia suscipit maiores saepe atque distinctio quia deserunt vitae laudantium pariatur, explicabo est fugit quo doloribus, rerum cumque sapiente consequatur. Debitis impedit at sed nostrum magni officia fugit enim, praesentium porro iste ea laborum! Corrupti rem aliquid quasi omnis! Eos similique nulla numquam ducimus reiciendis praesentium accusamus commodi, dolorum tempore, non temporibus illo. Cupiditate reprehenderit dolor consequuntur placeat repudiandae exercitationem commodi dolorem ipsa non consectetur. Fugiat expedita quas fugit omnis dicta temporibus quo vero blanditiis, esse nobis dolorum. Quis quasi molestiae voluptas voluptatum, autem architecto explicabo eligendi tempora hic reprehenderit inventore quo velit deleniti nulla quia officia ducimus provident exercitationem libero, dolorum adipisci, veniam accusantium temporibus pariatur. Aliquam repudiandae, quae rem possimus officia non explicabo nobis magni unde consequatur. Ipsam, earum repudiandae similique quos alias dolorum velit cum voluptatum magni, rem ipsa perspiciatis! Deserunt incidunt quae iste beatae porro repellendus, ducimus ut veritatis, ea, provident harum vero fugit nemo cum aut quos laborum eaque labore recusandae explicabo ipsam hic ratione? Placeat unde neque non numquam ratione. Dolorem reiciendis minima culpa ut odio repudiandae nulla, sunt ratione ullam nihil? Ad amet dignissimos ex architecto, quaerat inventore. Quos, beatae? Cum, non impedit iure sequi provident vel ab adipisci officia, minima pariatur sapiente assumenda odit, consequuntur tenetur eaque ex! Nesciunt soluta voluptatem fugiat illum delectus reiciendis facere consectetur necessitatibus ipsa saepe?</div>
+    <div style="font-family: 'montserrat',sans-serif;font-size: 15px;text-align: center;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae natus praesentium sed! Temporibus, consequuntur. Minima officia suscipit maiores saepe atque distinctio quia deserunt vitae laudantium pariatur, explicabo est fugit quo doloribus, rerum
+        cumque sapiente consequatur. Debitis impedit at sed nostrum magni officia fugit enim, praesentium porro iste ea laborum! Corrupti rem aliquid quasi omnis! Eos similique nulla numquam ducimus reiciendis praesentium accusamus commodi, dolorum tempore,
+        non temporibus illo. Cupiditate reprehenderit dolor consequuntur placeat repudiandae exercitationem commodi dolorem ipsa non consectetur. Fugiat expedita quas fugit omnis dicta temporibus quo vero blanditiis, esse nobis dolorum. Quis quasi molestiae
+        voluptas voluptatum, autem architecto explicabo eligendi tempora hic reprehenderit inventore quo velit deleniti nulla quia officia ducimus provident exercitationem libero, dolorum adipisci, veniam accusantium temporibus pariatur. Aliquam repudiandae,
+        quae rem possimus officia non explicabo nobis magni unde consequatur. Ipsam, earum repudiandae similique quos alias dolorum velit cum voluptatum magni, rem ipsa perspiciatis! Deserunt incidunt quae iste beatae porro repellendus, ducimus ut veritatis,
+        ea, provident harum vero fugit nemo cum aut quos laborum eaque labore recusandae explicabo ipsam hic ratione? Placeat unde neque non numquam ratione. Dolorem reiciendis minima culpa ut odio repudiandae nulla, sunt ratione ullam nihil? Ad amet
+        dignissimos ex architecto, quaerat inventore. Quos, beatae? Cum, non impedit iure sequi provident vel ab adipisci officia, minima pariatur sapiente assumenda odit, consequuntur tenetur eaque ex! Nesciunt soluta voluptatem fugiat illum delectus
+        reiciendis facere consectetur necessitatibus ipsa saepe?
+    </div> -->
+
+    <section class="projects-section bg-light" id="projects">
+        <div class="container">
+            <!-- Featured Project Row-->
+            <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+                <div class="col-xl-7 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" width="500px" alt=""></div>
+                <div class="col-xl-4 col-lg-5">
+                    <div class="featured-text text-center text-lg-left">
+                        <h4>Shoreline</h4>
+                        <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Project One Row-->
+            <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                <div class="col-lg-6"><img class="img-fluid" src="images/visionimage2.png" alt=""></div>
+                <div class="col-lg-6">
+                    <div class="bg-white text-center h-100 project">
+                        <div class="d-flex h-100">
+                            <div class="project-text w-100 my-auto text-center text-lg-left">
+                                <h4 class="text-black">Our vision</h4>
+                                <p class="mb-0 text-black-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                                <hr class="d-none d-lg-block mb-0 ml-0">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Project Two Row-->
+            <div class="row justify-content-center no-gutters">
+                <div class="col-lg-6" style="background-color: white;border: 1px solid red;"><img class="img-fluid" src="images/happywoman.png" alt=""></div>
+                <div class="col-lg-6 order-lg-first">
+                    <div class="bg-white text-center h-100 project">
+                        <div class="d-flex h-100">
+                            <div class="project-text w-100 my-auto text-center text-lg-right">
+                                <h4 class="text-black">Our mission</h4>
+                                <p class="mb-0 text-black-50">To provide best customer centric services related to the laptops and Computers, where people can select the best laptop suitable for them and its accessories </p>
+                                <hr class="d-none d-lg-block mb-0 mr-0">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
-    <div class="container-story" style="margin-top: 50px;">
-        <div class="coll-1" style="text-align: left;font-family: 'Montserrat', sans-serif; padding: 30px;">
-            <h1 style="font-size: 45px;line-height: 80px;">Founders Story</h1>
-            <div style="line-height: 40px;margin-top: 15px;font-size: 17px;"> All began during the lockdown when we
-                participated in a B-Plan Competition<br> which we could not win but
-                this idea had won our hearts. <br>To back this up, we could see many queries regarding proper laptop
-                selection
-                from our peers on our facebook groups. Determined, we set up on this journey to make one's laptop
-                selection
-                process easier. With the vision that our product will help someone to buy a laptop quickly and more
-                reliably
-                gives us the motivation to continue.
-                <!--<p>What makes our product unique is the team that has made it with
+
+    <div class="container" style="margin-top: 50px;">
+        <!-- <div class="row justify-content-center">
+            <div class="col-lg-6 align-items-center">
+                <img src="cartoon/simpleandeasy.PNG" width="94%" style="position: relative;height: auto;margin-top: 50px;">
+            </div>
+            <div class="col-lg-6">
+                <h1 style="font-size: 30px;line-height: 40px;">Who we are?</h1>
+                <div style="margin-top: 15px;font-size: 17px;"> All began during the lockdown when we participated in a B-Plan Competition<br> which we could not win but this idea had won our hearts. <br>To back this up, we could see many queries regarding proper laptop selection from our peers on
+                    our facebook groups. Determined, we set up on this journey to make one's laptop selection process easier. With the vision that our product will help someone to buy a laptop quickly and more reliably gives us the motivation to continue.
+
+                </div>
+
+            </div>
+        </div> -->
+        <div class="row justify-content-center" style="margin-top: 50px;">
+            <div class="col-lg-6">
+                <h1 style="font-size: 45px;line-height: 80px;">Founders Story</h1>
+                <div style="margin-top: 15px;font-size: 17px;"> All began during the lockdown when we participated in a B-Plan Competition<br> which we could not win but this idea had won our hearts. <br>To back this up, we could see many queries regarding proper laptop selection from our peers on
+                    our facebook groups. Determined, we set up on this journey to make one's laptop selection process easier. With the vision that our product will help someone to buy a laptop quickly and more reliably gives us the motivation to continue.
+                    <!--<p>What makes our product unique is the team that has made it with
                     love. Managing online classes, assignments, other extra academic activities and exams, we continued
                     working on and now we are here. Having said all this, we are always open to suggestions and
                     constructive criticism. Reach us at <a href="/">support@thunderman.in</a>
                 </p>-->
-            </div>
+                </div>
 
-        </div>
-        <div class="coll-1" style="display:table-cell;vertical-align:middle">
-            <img src="cartoon/6913.jpg" width="100%"
-                style="margin-top: auto;margin-bottom: auto;vertical-align: middle;">
+            </div>
+            <div class="col-lg-6" style="display:table-cell;vertical-align:middle">
+                <img src="cartoon/6913.jpg" width="100%" style="margin-top: auto;margin-bottom: auto;vertical-align: middle;">
+            </div>
         </div>
     </div>
-    <div class="container-story" style="margin-top: 50px;">
-        <div class="coll-1" style="text-align:center;">
-            <img src="cartoon/simpleandeasy.PNG" width="94%" style="position: relative;height: auto;margin-top: 50px;">
-        </div>
-        <div class="coll-1"
-            style="text-align: left;font-family: 'Montserrat', sans-serif; padding: 30px;padding-top: 10px;">
-            <h1 style="font-size: 45px;line-height: 60px;">What makes our laptop recommender best and unique?</h1>
-            <div style="line-height: 40px;margin-top: 15px;font-size: 17px;"> All began during the lockdown when we
-                participated in a B-Plan Competition<br> which we could not win but
-                this idea had won our hearts. <br>To back this up, we could see many queries regarding proper laptop
-                selection
-                from our peers on our facebook groups. Determined, we set up on this journey to make one's laptop
-                selection
-                process easier. With the vision that our product will help someone to buy a laptop quickly and more
-                reliably
-                gives us the motivation to continue.
-                <!--<p>What makes our product unique is the team that has made it with
-                    love. Managing online classes, assignments, other extra academic activities and exams, we continued
-                    working on and now we are here. Having said all this, we are always open to suggestions and
-                    constructive criticism. Reach us at <a href="/">support@thunderman.in</a>
-                </p>-->
-            </div>
 
-        </div>
-    </div>
 
     <!--slider-->
-    <div style="max-width: 95%;padding: 30px;margin: auto;">
+    <!-- <div style="max-width: 95%;padding: 30px;margin: auto;">
         <div class="owl-carousel owl-theme">
             <div class="card1">
                 <img src="images/headphones.png" alt="Avatar" style="width:90%">
@@ -138,8 +175,55 @@
             </div>
 
         </div>
-    </div>
+    </div> -->
 
+
+    <!----------------------------------our team  ---------------------------------------->
+    <section class="page-section bg-light" id="team">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
+                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="" />
+                        <h4>Kay Garland</h4>
+                        <p class="text-muted">Lead Designer</p>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="" />
+                        <h4>Larry Parker</h4>
+                        <p class="text-muted">Lead Marketer</p>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="" />
+                        <h4>Diana Petersen</h4>
+                        <p class="text-muted">Lead Developer</p>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 mx-auto text-center">
+                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <!--footer-->
@@ -167,15 +251,14 @@
             </div>
         </div>
         <div class="footcoll4">
-            <span style="font-size: 21px;" class="footer-underline"><b>Get in touch</b></span><br><br>
-            Email ID:<br><a href="#">contact@thunderman.in</a><br>
+            <span style="font-size: 21px;" class="footer-underline"><b>Get in touch</b></span><br><br> Email ID:<br><a href="#">contact@thunderman.in</a><br>
             <a href="#">Mobile: (+91) 0123456789/<br>
                 <!--<span style="margin-left: 100px">9876543210</span>-->
             </a><br>
             <a href="#">Phone: +91 22 24030820</a><br>
-            <a href="#">for more details, visit</a><a href="#">
-                <div id="footcontact"
-                    style="padding:6px;text-align: center;margin-top: 5px; border-radius: 5px;border:1px solid orange;width: 40%;">
+            <a href="#">for more details, visit</a>
+            <a href="#">
+                <div id="footcontact" style="padding:6px;text-align: center;margin-top: 5px; border-radius: 5px;border:1px solid orange;width: 40%;">
                     contact us</div>
             </a><br>
         </div>
